--- a/30AulaMod2HTMLCSS/grid-layout.html
+++ b/30AulaMod2HTMLCSS/grid-layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +15,20 @@
         }
 
         .item:nth-child(1) {
+            /*
+            Aqui usamos grid-column e grid-row para definir que espaço o item 1 vai ocupar
+            e que ele vai ocupar a primeira coluna e a primeira linha
+            */
             grid-column: 1/3;
             grid-row: 1;
         }
 
         .item:nth-child(4) {
+             
+            /*
+            Aqui usamos grid-column e grid-row para definir que espaço o item 4 vai ocupar
+            e que ele vai ocupar a primeira coluna e a segunda linha
+            */
             grid-column: 1/3;
             grid-row: 2/4;
         }
