--- a/32AulaMod2JavaScript/index.html
+++ b/32AulaMod2JavaScript/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,29 @@
             <input id="input-item" type="text" placeholder="Adicione um item..." required>
             <button type="submit">Adicionar</button>
             <button id="btn-limpar" class="limpar">Limpar Lista</button>
+        </form>
+        <ul id="lista-itens"></ul>
+    </div>
+    <script src="app.js"></script>
+</body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de tarefas</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Lista de tarefas</h1>
+        <form id="form-adicionar">
+            <input id="input-item" type="text" placeholder="Adicione uma tarefa:" required>
+            <button type="submit">Adicionar</button>
+            <button id="btn-limpar" class="limpar">Apagar tudo</button>
         </form>
         <ul id="lista-itens"></ul>
     </div>
