Comentando as linhas

--- a/32AulaMod2JavaScript/index.html
+++ b/32AulaMod2JavaScript/index.html
@@ -38,8 +38,9 @@
             <button type="submit">Adicionar</button>
             <button id="btn-limpar" class="limpar">Apagar tudo</button>
         </form>
-        <ul id="lista-itens"></ul>
+        <ul id="lista-itens"></ul><!--Esta lista será preenchida dinamicamente com JavaScript-->
     </div>
-    <script src="app.js"></script>
+    <script src="app.js"></script> <!--Este comando cria o link do html para o javascript.
+    É importantye que este comando esteja ao final do body para garantir que o HTML todo seja carregado ntes do JavaScript -->
 </body>
 </html>
