--- a/32AulaMod2JavaScript_JavaScriptComHTML_LISTA_DE_TAREFAS/index.html
+++ b/32AulaMod2JavaScript_JavaScriptComHTML_LISTA_DE_TAREFAS/index.html
@@ -32,7 +32,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+    <div class="container">
+        <h1>Lista de tarefas</h1>
+        <form id="form-adicionar">
+            <input id="input-item" type="text" placeholder="Adicione uma tarefa:" required>
+            <button type="submit">Adicionar</button>
+            <button id="btn-limpar" class="limpar">Apagar tudo</button>
+        </form>
+        <ul id="lista-itens"></ul><!--Esta lista será preenchida dinamicamente com JavaScript-->
+    </div>
     <script src="app.js"></script> <!--Este comando cria o link do html para o javascript.
     É importantye que este comando esteja ao final do body para garantir que o HTML todo seja carregado ntes do JavaScript -->
 </body>
